Hero Support Benefits

--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
     <!-- Navbar -->
     <section class="navbar-laracamp">
         <nav class="navbar navbar-expand-lg shadow-sm">
-            <div class="container">
+
+            <div class="container container-navbar">
 
                 <a class="navbar-brand" href="#">
                     <img src="images/logo.png" alt="Brand Laracamp">
@@ -54,16 +55,106 @@
 
                     </ul>
 
+                    <!-- Sebelum Login -->
                     <div class="d-flex">
                         <a href="#" class="btn btn-sign-in">Sign In</a>
                         <a href="#" class="btn btn-success">Sign Up</a>
                     </div>
+                    <!-- End Sebelum Login -->
+
+                    <!-- Setelah Login -->
+                    <!-- <div class="welcome-user">
+                        <span>Hello, Febryan!</span>
+                        <img class="img-user" src="images/photo.png" alt="Febryan">
+                    </div> -->
+                    <!-- End Setelah Login -->
 
                 </div>
             </div>
+
         </nav>
     </section>
     <!-- End Navbar -->
+
+
+    <!-- Hero Section -->
+    <section class="hero-section container">
+
+        <div class="row">
+
+            <div class="col-md-6 content-hero d-flex align-items-center">
+
+                <div>
+                    <span>LEARN FROM EXPERTS</span>
+
+                    <h2 class="hero-title">Start Your <span>Developer <br>
+                    Journey</span> Today</h2>
+
+                    <p class="desc">Our bootcamp is helping junior developers who <br>
+                    are really passionate in the programming.</p>
+
+                    <a href="#" class="btn btn-get-started">Get Started</a>
+                </div>
+
+            </div>
+
+            <div class="col-md-6 hero-image">
+                <img class="img-fluid" src="images/banner.png" alt="Banner">
+            </div>
+
+        </div>
+
+    </section>
+    <!-- End Hero Section -->
+
+
+    <!-- Support -->
+    <section class="support container text-center">
+        <img src="images/support.png" alt="Support" class="img-fluid">
+    </section>
+    <!-- End Support -->
+
+
+    <!-- Benefits -->
+    <section class="benefits container">
+
+        <div class="title-benefits text-center">
+            <span>OUR SUPER BENEFITS</span>
+            <p class="sub-title">Learn Faster & Better</p>
+        </div>
+
+        <div class="varian-benefits">
+            <div class="row">
+
+                <div class="col-md-3 varian">
+                    <img src="images/icons/ic_globe-1.png" alt="Diversity"> <br>
+                    <span>Diversity</span>
+                    <p class="varian-content">Learn from anyone around the world and get a new skills</p>
+                </div>
+
+                <div class="col-md-3 varian">
+                    <img src="images/icons/ic_globe-2.png" alt="Diversity"> <br>
+                    <span>A.I Guideline</span>
+                    <p class="varian-content">Lara will help you to choose which path that suitable for you</p>
+                </div>
+
+                <div class="col-md-3 varian">
+                    <img src="images/icons/ic_globe-3.png" alt="Diversity"> <br>
+                    <span>1-1 Mentoring</span>
+                    <p class="varian-content">We will ensure that you will get what you really do need</p>
+                </div>
+
+                <div class="col-md-3 varian">
+                    <img src="images/icons/ic_globe-4.png" alt="Diversity"> <br>
+                    <span>Future Job</span>
+                    <p class="varian-content">Get your dream job in your dream company together with us</p>
+                </div>
+
+            </div>
+        </div>
+
+    </section>
+    <!-- End Benefits -->
     
     <script src="js/bootstrap.bundle.min.js"></script>
 </body>
