--- a/index.html
+++ b/index.html
@@ -155,6 +155,100 @@
 
     </section>
     <!-- End Benefits -->
+
+
+    <!-- Section Career -->
+    <section class="career container">
+
+        <div class="row">
+
+            <div class="col-md-6 img-career d-flex justify-content-end">
+                <img src="images/career-1.png" alt="Career 1" class="img-fluid">
+            </div>
+
+            <div class="col-md-6 content-career d-flex align-items-center">
+                <div class="desc-career">
+                    <span>BETTER CAREER</span>
+                    <h3 class="title">Prepare The Journey</h3>
+                    <p class="desc">We do really care to our students' future career <br>
+                    so it would be good if you are taking a quick interview</p>
+                    <a href="#" class="btn btn-career">Learn More</a>
+                </div>
+            </div>
+
+        </div>
+
+        <div class="row">
+
+            <div class="col-md-6 content-career justify-content-center d-flex align-items-center">
+                <div class="desc-career">
+                    <span>STUDY HARDER</span>
+                    <h3 class="title">Finish The Project</h3>
+                    <p class="desc">Each of you will be joining the private group and also <br>
+                    working together with team members on project</p>
+                    <a href="#" class="btn btn-career">View Demo</a>
+                </div>
+            </div>
+
+            <div class="col-md-6 img-career d-flex justify-content-end">
+                <img src="images/career-2.png" alt="Career 2" class="img-fluid">
+            </div>            
+
+        </div>
+
+        <div class="row">
+
+            <div class="col-md-6 img-career d-flex justify-content-end">
+                <img src="images/career-3.png" alt="Career 3" class="img-fluid">
+            </div>
+
+            <div class="col-md-6 content-career d-flex align-items-center">
+                <div class="desc-career">
+                    <span>END GAME</span>
+                    <h3 class="title">Big Demo Day</h3>
+                    <p class="desc">Learn how to speaking in public to demonstrate your <br>
+                    final project and receive the important feedbacks</p>
+                    <a href="#" class="btn btn-career">Showcase</a>
+                </div>
+            </div>
+
+        </div>
+
+    </section>
+    <!-- End Section Career -->
+
+
+    <!-- Section Investment -->
+    <section class="investment">
+
+        <div class="container">
+
+            <div class="row">
+
+                <div class="col-md-4 invest-content">
+                    <div class="desc-content">
+                        <span>GOOD INVESTMENT</span>
+                        <h3 class="title">Start Your Journey</h3>
+                        <p class="desc">We do have a couple of plans that might fit for you.
+                        Kindly download our full syallbus below.</p>
+                        <a href="#" class="btn btn-silabus">View Syllabus</a>
+                    </div>
+                </div>
+
+                <div class="col-md-4">
+                    Tes
+                </div>
+
+                <div class="col-md-4">
+                    Tes
+                </div>
+
+            </div>
+
+        </div>
+
+    </section>
+    <!-- End Section Investment -->
     
     <script src="js/bootstrap.bundle.min.js"></script>
 </body>
