Investment 100% + Support2 dan Footer 50%

--- a/index.html
+++ b/index.html
@@ -235,6 +235,147 @@
                     </div>
                 </div>
 
+                <div class="col-md-4 kartu">
+                    <div class="card" style="width: 310px;">
+                        <div class="card-body">
+                            <div class="text-center">
+                                <span>GILA BELAJAR</span>
+                            </div>                            
+                            <h5 class="card-title">$280K</h5>
+
+                            <div class="list-data">
+                                <img class="list-img" src="images/ic_check.svg" alt="Icon Check">
+                                <p>Pro Techstack Kit</p>
+                            </div>
+                            <hr>
+
+                            <div class="list-data">
+                                <img class="list-img" src="images/ic_check.svg" alt="Icon Check">
+                                <p>iMac Pro 2021 & Display</p>
+                            </div>
+                            <hr>
+
+                            <div class="list-data">
+                                <img class="list-img" src="images/ic_check.svg" alt="Icon Check">
+                                <p>1-1 Mentoring Program</p>
+                            </div>
+                            <hr>
+
+                            <div class="list-data">
+                                <img class="list-img" src="images/ic_check.svg" alt="Icon Check">
+                                <p>Final Project Certificate</p>
+                            </div>
+                            <hr>
+
+                            <div class="list-data">
+                                <img class="list-img" src="images/ic_check.svg" alt="Icon Check">
+                                <p>Offline Course Videos</p>
+                            </div>
+                            <hr>
+
+                            <div class="list-data">
+                                <img class="list-img" src="images/ic_check.svg" alt="Icon Check">
+                                <p>Future Job Opportinity</p>
+                            </div>
+                            <hr>
+
+                            <div class="list-data">
+                                <img class="list-img" src="images/ic_check.svg" alt="Icon Check">
+                                <p>Premium Design Kit</p>
+                            </div>
+                            <hr>
+
+                            <div class="list-data">
+                                <img class="list-img" src="images/ic_check.svg" alt="Icon Check">
+                                <p>Website Builder</p>
+                            </div>
+
+                            <a href="#" class="btn btn-primary">Take This Plan</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-4 kartu">
+                    <div class="card" style="width: 310px;">
+                        <div class="card-body">
+                            <div class="text-center">
+                                <span>BARU MULAI</span>
+                            </div>                            
+                            <h5 class="card-title">$140K</h5>
+
+                            <div class="list-data">
+                                <img class="list-img" src="images/ic_check.svg" alt="Icon Check">
+                                <p>1-1 Mentoring Program</p>
+                            </div>
+                            <hr>
+
+                            <div class="list-data">
+                                <img class="list-img" src="images/ic_check.svg" alt="Icon Check">
+                                <p>Final Project Certificate</p>
+                            </div>
+                            <hr>
+
+                            <div class="list-data">
+                                <img class="list-img" src="images/ic_check.svg" alt="Icon Check">
+                                <p>Offline Course Videos</p>
+                            </div>
+                            <hr>
+
+                            <div class="list-data">
+                                <img class="list-img" src="images/ic_check.svg" alt="Icon Check">
+                                <p>Future Job Opportinity</p>
+                            </div>
+
+                            <a href="#" class="btn btn-secondary">Start With This Plan</a>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+
+        </div>
+
+    </section>
+    <!-- End Section Investment -->
+
+
+    <!-- Support -->
+    <section class="support2 container text-center">
+        <img src="images/support.png" alt="Support" class="img-fluid">
+    </section>
+    <!-- End Support -->
+
+
+    <section class="footer-section">
+
+        <div class="container text-center header-footer">
+            <span>SUCCESS STUDENTS</span>
+            <h3>We Really Love Laracamp</h3>
+        </div>
+
+        <div class="container students">
+            <div class="row">
+
+                <div class="col-md-4 kartu">
+                    <div class="card" style="width: 300px;">
+                        <div class="card-body">
+                            <img class="rate img-fluid" src="images/rate.svg" alt="Rate">
+                            <p class="card-text">
+                                I was not really into code but
+                                after they teach me how to
+                                train my logic then I was really
+                                fall in love with code</p>
+                            <div class="user-students">
+                                <img class="user-img img-fluid" src="images/user-2.png" alt="User">
+                                <div class="nama">
+                                    <span>Fanny</span>
+                                    <p class="profesi">Developer at Google</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
                 <div class="col-md-4">
                     Tes
                 </div>
@@ -244,11 +385,9 @@
                 </div>
 
             </div>
-
         </div>
 
     </section>
-    <!-- End Section Investment -->
     
     <script src="js/bootstrap.bundle.min.js"></script>
 </body>
