--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Laracamp - Febryan</title>
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -347,17 +347,33 @@
 
 
     <section class="footer-section">
-
         <div class="container text-center header-footer">
             <span>SUCCESS STUDENTS</span>
             <h3>We Really Love Laracamp</h3>
         </div>
-
         <div class="container students">
             <div class="row">
-
-                <div class="col-md-4 kartu">
-                    <div class="card" style="width: 300px;">
+                <div class="col-md-4 kartu d-flex justify-content-end">
+                    <div class="card" style="width: 287px;">
+                        <div class="card-body">
+                            <img class="rate img-fluid" src="images/rate.svg" alt="Rate">
+                            <p class="card-text">
+                                I was not really into code but
+                                after they teach me how to
+                                train my logic then I was really
+                                fall in love with code</p>
+                            <div class="user-students">
+                                <img class="user-img img-fluid" src="images/user-1.png" alt="User">
+                                <div class="nama">
+                                    <span>Fanny</span>
+                                    <p class="profesi">Developer at Google</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 kartu d-flex justify-content-center">                    
+                    <div class="card" style="width: 287px;">
                         <div class="card-body">
                             <img class="rate img-fluid" src="images/rate.svg" alt="Rate">
                             <p class="card-text">
@@ -375,18 +391,30 @@
                         </div>
                     </div>
                 </div>
-
-                <div class="col-md-4">
-                    Tes
+                <div class="col-md-4 kartu">                    
+                    <div class="card" style="width: 287px;">
+                        <div class="card-body">
+                            <img class="rate img-fluid" src="images/rate.svg" alt="Rate">
+                            <p class="card-text">
+                                I was not really into code but
+                                after they teach me how to
+                                train my logic then I was really
+                                fall in love with code</p>
+                            <div class="user-students">
+                                <img class="user-img img-fluid" src="images/user-3.png" alt="User">
+                                <div class="nama">
+                                    <span>Fanny</span>
+                                    <p class="profesi">Developer at Google</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-
-                <div class="col-md-4">
-                    Tes
-                </div>
-
             </div>
         </div>
-
+        <p class="text-center copy">
+            All Rights Reserved. Copyright Laracamp BWA Indonesia.
+        </p>
     </section>
     
     <script src="js/bootstrap.bundle.min.js"></script>
