--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Febryan</title>
+    <title>Beranda - Febryan</title>
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -26,7 +26,7 @@
 
             <div class="container container-navbar">
 
-                <a class="navbar-brand" href="#">
+                <a class="navbar-brand" href="/">
                     <img src="images/logo.png" alt="Brand Laracamp">
                 </a>
 
