--- a/dashboard.html
+++ b/dashboard.html
@@ -83,26 +83,64 @@
         <h2>My Bootcamps</h2>
 
         <!-- List Table My Bootcamp -->
-        <table class="table table-borderless">
-            <tbody>
-                <tr>
-                    <td class="td-img">
-                        <img src="images/cover.png" alt="Image Bootcamp" class="img-fluid">
-                    </td>
-                    <td class="td-bootcamp">
-                        <div class="desc ps-3">
-                            <p class="name">Gila Belajar</p>
-                            <p class="date">September 24, 2021</p>
-                        </div>
-                    </td> 
-                    <td>$280,000</td>
-                    <td>Waiting for Payment</td>
-                    <td>
-                        <a href="#" class="btn btn-primary">View Invoice</a>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
+        <div class="table-responsive">
+            <table class="table table-borderless">
+                <tbody>
+                    <tr>
+                        <td class="td-img">
+                            <img src="images/cover.png" alt="Image Bootcamp">
+                        </td>
+                        <td class="td-bootcamp">
+                            <div class="desc">
+                                <p class="name">Gila Belajar</p>
+                                <p class="date">September 24, 2021</p>
+                            </div>
+                        </td> 
+                        <td class="td-price">$280,000</td>
+                        <td class="td-status">Waiting for Payment</td>
+                        <td class="td-invoice">
+                            <a href="#" class="btn btn-primary">View Invoice</a>
+                        </td>
+                    </tr>
+
+                    <tr>
+                        <td class="td-img">
+                            <img src="images/cover.png" alt="Image Bootcamp">
+                        </td>
+                        <td class="td-bootcamp">
+                            <div class="desc">
+                                <p class="name">Gila Belajar</p>
+                                <p class="date">September 24, 2021</p>
+                            </div>
+                        </td> 
+                        <td class="td-price">$280,000</td>
+                        <td class="td-status">Success</td>
+                        <td class="td-invoice">
+                            <a href="#" class="btn btn-primary">View Invoice</a>
+                        </td>
+                    </tr>
+
+                    <tr>
+                        <td class="td-img">
+                            <img src="images/cover.png" alt="Image Bootcamp">
+                        </td>
+                        <td class="td-bootcamp">
+                            <div class="desc">
+                                <p class="name">Gila Belajar</p>
+                                <p class="date">September 24, 2021</p>
+                            </div>
+                        </td> 
+                        <td class="td-price">$280,000</td>
+                        <td class="td-status">Canceled</td>
+                        <td class="td-invoice">
+                            <a href="#" class="btn btn-primary">View Invoice</a>
+                        </td>
+                    </tr>
+
+
+                </tbody>
+            </table>
+        </div>
         <!-- End List Table My Bootcamp -->
 
     </section>
